Mobile issues, delete icon always visible on small screens

--- a/client/src/components/Checkbox.css
+++ b/client/src/components/Checkbox.css
@@ -1,5 +1,6 @@
 .checkbox-container {
   padding: 0 20px 0 5px;
+  z-index: 5;
 }
 
 .custom-checkbox {
